--- a/style.css
+++ b/style.css
@@ -5,3 +5,49 @@
 *{
     font-family: 'Work Sans', sans-serif;
 }
+/* header section */
+
+header{
+  background-color: rgba(255, 144, 14, 0.10);
+  padding: 50px 240px;
+ 
+}
+nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav >ul{
+  display: flex;
+}
+.nav-title{
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #424242;
+}
+nav li{
+  list-style: none;
+  margin-right: 30px;
+  font-weight: 500;
+  font-size: 1rem;
+}
+nav li a{
+  text-decoration: none;
+  color: #424242;
+}
+
+/* banner-content */
+
+.banner-content{
+  max-width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+.banner-title{
+  font-size: 4rem;
+  font-weight: 700;
+  color: #424242;
+}
+.banner-description{
+  color: #424242;
+}
