features content addedt

--- a/style.css
+++ b/style.css
@@ -65,6 +65,60 @@ nav li a{
   border: 0;
 }
 
+/* main section */
+
+main{
+  max-width: 1440px;
+  margin: 0 auto;
+}
+.teams-container{
+  display: flex;
+  align-items: center;
+}
+.teams-img-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+}
+.teams-content{
+  padding-left: 70px;
+  padding-right: 70px;
+}
+.teams-title {
+  font-size: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
